--- a/CN_AV/chinese_AV.html
+++ b/CN_AV/chinese_AV.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>国产AV - 影片列表</title>
+<title>无码日本AV</title>
 <style>
 body { margin:0; font-family:"微软雅黑",sans-serif; background:#0d0d0d; color:#fff; padding-top:60px; }
 .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(240px,1fr)); gap:20px; padding:20px; }
@@ -25,6 +25,14 @@ body { margin:0; font-family:"微软雅黑",sans-serif; background:#0d0d0d; colo
 .pagination button:hover:not(:disabled) { background:#555; }
 .pagination button:disabled { opacity:.4; cursor:not-allowed; }
 .pagination input { width:50px; padding:4px; background:#222; border:1px solid #555; color:#fff; text-align:center; border-radius:4px; }
+/* 固定 header */
+#header-placeholder {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
 </style>
 </head>
 <body>
@@ -34,35 +42,76 @@ body { margin:0; font-family:"微软雅黑",sans-serif; background:#0d0d0d; colo
 <div class="pagination" id="pagination"></div>
 
 <script>
-// 最大页数
-const MAX_PAGE = 196;
+/* -------------------------------
+      动态读取最大页数 MAX_PAGE
+-------------------------------- */
+let MAX_PAGE = 1;
 
-/* ========== 加载顶部 header.html + header.js ========== */
+async function loadMaxPage(){
+  try{
+    const res = await fetch("https://yunvgong.com/CN_AV/category/stats.json");
+    const json = await res.json();
+    MAX_PAGE = parseInt(json["all_page"]) || 1;
+  }catch(e){
+    console.error("stats.json 加载失败，使用默认 MAX_PAGE = 1");
+  }
+
+  initPage();  // 等 MAX_PAGE 读取完再运行内容
+}
+
+/* -------------------------------
+         主初始化流程
+-------------------------------- */
+function initPage(){
+  const pageNumber = getPageFromURL();
+  renderPagination(pageNumber);
+
+  // 加载对应分页的数据文件
+  const script = document.createElement('script');
+  script.src = `https://yunvgong.com/CN_AV/category/all_page/page_${pageNumber}.js`;
+  script.onload = ()=>{
+    if(typeof window.PAGE_DATA !== 'undefined'){
+      renderAll(window.PAGE_DATA);
+    } else {
+      console.error(`page_${pageNumber}.js 未定义 window.PAGE_DATA`);
+    }
+  };
+  document.body.appendChild(script);
+}
+
+/* -------------------------------
+            Header 载入
+-------------------------------- */
 fetch('header.html')
-  .then(r => r.text())
+  .then(res => res.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
-    const s = document.createElement('script');
-    s.src = 'header.js';
-    s.onload = () => {
+
+    const script = document.createElement('script');
+    script.src = 'header.js';
+    script.onload = () => {
       if (typeof initHeaderMenu === 'function') initHeaderMenu();
-      if (typeof setActiveMenu === 'function') setActiveMenu('menu-home');
+      if (typeof setActiveMenu === 'function') setActiveMenu('menu-drama');
     };
-    document.body.appendChild(s);
+    document.body.appendChild(script);
   });
 
+fetch('https://yunvgong.com/footer.html')
+  .then(r=>r.text())
+  .then(html=>{
+    const footer=document.createElement('div');
+    footer.innerHTML = html;
+    document.body.appendChild(footer);
+  });
 
-fetch('https://yunvgong.com/footer.html').then(r=>r.text()).then(html=>{
-  const footer=document.createElement('div'); footer.innerHTML = html; document.body.appendChild(footer);
-});
-
-// 点击播放
+/* -------------------------------
+           功能方法
+-------------------------------- */
 function goPlay(url){
   localStorage.setItem('dramaScroll', window.scrollY);
   location.href = url;
 }
 
-// 渲染全部影片
 function renderAll(data){
   const box = document.getElementById('dramaGrid');
   box.innerHTML = '';
@@ -89,12 +138,10 @@ function renderAll(data){
     `;
   });
 
-  // 恢复滚动位置
   const savedScroll = parseInt(localStorage.getItem('dramaScroll'));
   if(savedScroll) window.scrollTo(0,savedScroll);
 }
 
-// 获取 URL 参数 ?pages=N，并限制范围 1~MAX_PAGE
 function getPageFromURL(){
   const params = new URLSearchParams(window.location.search);
   let pages = parseInt(params.get('pages'));
@@ -103,7 +150,6 @@ function getPageFromURL(){
   return pages;
 }
 
-// 渲染分页控件
 function renderPagination(currentPage){
   const pagination = document.getElementById('pagination');
   pagination.innerHTML = `
@@ -114,7 +160,6 @@ function renderPagination(currentPage){
   `;
 }
 
-// 跳转到指定页
 function jumpToPage(){
   let p = parseInt(document.getElementById('jumpPage').value);
   if(!p || p < 1) p = 1;
@@ -122,28 +167,16 @@ function jumpToPage(){
   location.href = `${window.location.pathname}?pages=${p}`;
 }
 
-// 上下页切换
 function changePage(p){
   if(p < 1) p = 1;
   if(p > MAX_PAGE) p = MAX_PAGE;
   location.href = `${window.location.pathname}?pages=${p}`;
 }
 
-// 初始化
-const pageNumber = getPageFromURL();
-renderPagination(pageNumber);
-
-// 动态加载对应页 JS
-const script = document.createElement('script');
-script.src = `https://yunvgong.com/CN_AV/category/all_page/page_${pageNumber}.js`;
-script.onload = ()=>{
-  if(typeof window.PAGE_DATA !== 'undefined'){
-    renderAll(window.PAGE_DATA);
-  } else {
-    console.error(`page_${pageNumber}.js 未定义 window.PAGE_DATA`);
-  }
-};
-document.body.appendChild(script);
+/* -------------------------------
+        🚀 页面启动入口
+-------------------------------- */
+loadMaxPage();
 </script>
 
 </body>
