--- a/schoolGirl/comicDetails.html
+++ b/schoolGirl/comicDetails.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>福利姬播放</title>
+<title>少女阁图集</title>
 
 <style>
 html, body {
@@ -157,7 +157,7 @@ const seriesID=getSeries();
 function loadComicData(){
     return new Promise((resolve)=>{
         const s=document.createElement("script");
-        s.src=`https://yunvgong.com/comics/menu/${seriesID}_comics_data.js`;
+        s.src=`https://yunvgong.com/schoolGirl/menu/${seriesID}_comics_data.js`;
         s.onload=()=>resolve(comicData);
         document.body.appendChild(s);
     });
