--- a/schoolGirl/all.html
+++ b/schoolGirl/all.html
@@ -227,7 +227,7 @@ function renderAll(data){
       </div>
       <div class="card-info">
         <div class="card-info-top">
-
+          <span class="idcode">${d.IDcode}</span>
           <span class="title">${d.title}</span>
         </div>
         <div class="card-info-bottom">
