--- a/JAV/player_template.html
+++ b/JAV/player_template.html
@@ -247,8 +247,8 @@ body > .container {
             <p><strong>剧情介绍:</strong> <span id="description"></span></p>
 
 <h2 style="font-weight:bold; text-align:center; margin:20px 0;">
-  <a href="https://t.me/TT_Japanchihan" target="_blank" style="color:#ffa500; text-decoration:none;">
-    加入官方电报群 | 解锁更多片
+  <a href="https://t.me/yunvgongjapanav" target="_blank" style="color:#ffa500; text-decoration:none;">
+    加入官方电报群-日本AV | 解锁更多片
   </a>
 </h2>
 
