--- a/JAV/header.html
+++ b/JAV/header.html
@@ -17,7 +17,7 @@
 		<a href="/JAV/actress">日本女优</a>
 		<a href="/JAV/company">A片出品厂</a>
 		<a href="/JAV/tag_all/tag_subtitle" class="bold">标签分类</a>
-		<a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
+		<a href="https://t.me/yunvgongjapanav" target="_blank">电报群-日本AV</a>
   </nav>
 </div>
 
