--- a/GirlPhoto/comicDetails.html
+++ b/GirlPhoto/comicDetails.html
@@ -224,7 +224,7 @@ function init(data){
 
     modeBtn.onclick=()=>{
         scrollMode=!scrollMode;
-        modeBtn.innerText=scrollMode?"翻页模式":"下拉模式";
+        modeBtn.innerText=scrollMode?"切换翻页模式":"切换下拉模式";
         viewer.innerHTML="";
         scrollItems=[];
         if(scrollMode){
