--- a/GirlPhoto/comicDetails.html
+++ b/GirlPhoto/comicDetails.html
@@ -117,7 +117,7 @@ html,body{
 <button id="next" class="nav-btn">→</button>
 
 <div id="homeBtn">福利姬首页</div>
-<div id="modeBtn">下拉模式</div>
+<div id="modeBtn">切换下拉模式</div>
 <div id="bottomBar">预览 | <span id="pageInfo">1 / 1</span></div>
 <div id="preview"></div>
 
