--- a/comics/comicDetails.html
+++ b/comics/comicDetails.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+<meta name="viewport"
+      content="width=device-width,initial-scale=1.0,user-scalable=no">
 <title>Comic Viewer</title>
 
 <style>
@@ -31,16 +32,16 @@ html,body{
 }
 
 /* ===== 下拉模式 ===== */
-.scroll-mode{
-    overflow-y:auto;
-}
+.scroll-mode{ overflow-y:auto; }
 .scroll-item{
     width:100%;
     text-align:center;
     margin-bottom:14px;
 }
 .scroll-img{
-    max-width:100%;
+    max-width:92%;
+    max-height:90vh;
+    touch-action:none;
 }
 
 /* ===== 翻页按钮 ===== */
@@ -132,14 +133,12 @@ function loadData(){
         document.body.appendChild(s);
     });
 }
-
 loadData().then(init);
 
 function init(data){
     const viewer = document.getElementById("viewer");
     const preview = document.getElementById("preview");
     const pageInfo = document.getElementById("pageInfo");
-    const modeBtn = document.getElementById("modeBtn");
 
     homeBtn.onclick = ()=>location.href="https://yunvgong.com/comics/all.html";
 
@@ -163,6 +162,12 @@ function init(data){
         thumbs.push(t);
     });
 
+    function applyTransform(i){
+        const s=states[i];
+        pages[i].style.transform =
+            `translate(calc(-50% + ${s.x}px), calc(-50% + ${s.y}px)) scale(${s.scale})`;
+    }
+
     function showPage(i){
         current=i;
         pageInfo.innerText=`${i+1} / ${pages.length}`;
@@ -173,21 +178,14 @@ function init(data){
         updateNav();
     }
 
-    function applyTransform(i){
-        const s=states[i];
-        pages[i].style.transform =
-            `translate(calc(-50% + ${s.x}px), calc(-50% + ${s.y}px)) scale(${s.scale})`;
-    }
-
     function updateNav(){
-        const isMobile = innerWidth<=768;
         if(scrollMode){
             prev.style.display=next.style.display="none";
             return;
         }
-        if(isMobile){
-            prev.style.display=next.style.display=
-                states[current].scale>1?"block":"none";
+        if(innerWidth<=768){
+            prev.style.display=next.style.display =
+                states[current].scale>1 ? "block" : "none";
         }else{
             prev.style.display=next.style.display="block";
         }
@@ -195,24 +193,73 @@ function init(data){
 
     function onPreviewClick(i){
         if(scrollMode){
-            const item=scrollItems[i];
-            const img=item?.querySelector("img");
-            if(!item) return;
-            if(img && !img.complete){
-                img.onload=()=>item.scrollIntoView({behavior:"smooth"});
-            }else{
-                item.scrollIntoView({behavior:"smooth"});
-            }
+            scrollItems[i]?.scrollIntoView({behavior:"smooth",block:"start"});
         }else{
             showPage(i);
         }
     }
 
-    showPage(0);
+    /* ===== 翻页触控（修复滑动） ===== */
+    let startX=0,startY=0;
+    let swipeStartX=0;
+    let lastDist=0,isPinch=false,isPan=false;
 
-    prev.onclick=()=>current>0&&showPage(current-1);
-    next.onclick=()=>current<pages.length-1&&showPage(current+1);
+    viewer.addEventListener("touchstart",e=>{
+        if(scrollMode) return;
+        if(e.touches.length===2){
+            isPinch=true;
+            lastDist=Math.hypot(
+                e.touches[0].clientX-e.touches[1].clientX,
+                e.touches[0].clientY-e.touches[1].clientY
+            );
+        }else{
+            startX=swipeStartX=e.touches[0].clientX;
+            startY=e.touches[0].clientY;
+            isPan = states[current].scale>1;
+        }
+    },{passive:false});
 
+    viewer.addEventListener("touchmove",e=>{
+        if(scrollMode) return;
+        const s=states[current];
+
+        if(isPinch && e.touches.length===2){
+            e.preventDefault();
+            const d=Math.hypot(
+                e.touches[0].clientX-e.touches[1].clientX,
+                e.touches[0].clientY-e.touches[1].clientY
+            );
+            s.scale=Math.min(5,Math.max(1,s.scale*(d/lastDist)));
+            lastDist=d;
+            applyTransform(current);
+            updateNav();
+            return;
+        }
+
+        if(isPan && e.touches.length===1){
+            e.preventDefault();
+            const dx=e.touches[0].clientX-startX;
+            const dy=e.touches[0].clientY-startY;
+            startX=e.touches[0].clientX;
+            startY=e.touches[0].clientY;
+            s.x+=dx; s.y+=dy;
+            applyTransform(current);
+        }
+    },{passive:false});
+
+    viewer.addEventListener("touchend",e=>{
+        if(scrollMode) return;
+        if(isPinch){ isPinch=false; return; }
+
+        const dx=e.changedTouches[0].clientX - swipeStartX;
+        if(states[current].scale===1 && Math.abs(dx)>60){
+            dx<0 && current<pages.length-1 && showPage(current+1);
+            dx>0 && current>0 && showPage(current-1);
+        }
+        isPan=false;
+    });
+
+    /* ===== PC 缩放 ===== */
     viewer.addEventListener("wheel",e=>{
         if(scrollMode) return;
         e.preventDefault();
@@ -222,24 +269,66 @@ function init(data){
         updateNav();
     },{passive:false});
 
+    /* ===== 下拉模式（独立缩放） ===== */
     modeBtn.onclick=()=>{
         scrollMode=!scrollMode;
         modeBtn.innerText=scrollMode?"切换翻页模式":"切换下拉模式";
         viewer.innerHTML="";
         scrollItems=[];
+
         if(scrollMode){
             viewer.classList.add("scroll-mode");
             viewer.style.overflowY="auto";
+
             data.images.forEach(src=>{
                 const wrap=document.createElement("div");
                 wrap.className="scroll-item";
                 const img=document.createElement("img");
                 img.src=src;
                 img.className="scroll-img";
+
+                let s={scale:1,x:0,y:0},sx=0,sy=0,last=0,pinch=false;
+
+                img.addEventListener("touchstart",e=>{
+                    if(e.touches.length===2){
+                        pinch=true;
+                        last=Math.hypot(
+                            e.touches[0].clientX-e.touches[1].clientX,
+                            e.touches[0].clientY-e.touches[1].clientY
+                        );
+                    }else{
+                        sx=e.touches[0].clientX;
+                        sy=e.touches[0].clientY;
+                    }
+                });
+
+                img.addEventListener("touchmove",e=>{
+                    if(pinch && e.touches.length===2){
+                        e.preventDefault();
+                        const d=Math.hypot(
+                            e.touches[0].clientX-e.touches[1].clientX,
+                            e.touches[0].clientY-e.touches[1].clientY
+                        );
+                        s.scale=Math.min(5,Math.max(1,s.scale*(d/last)));
+                        last=d;
+                    }else if(s.scale>1){
+                        e.preventDefault();
+                        s.x+=e.touches[0].clientX-sx;
+                        s.y+=e.touches[0].clientY-sy;
+                        sx=e.touches[0].clientX;
+                        sy=e.touches[0].clientY;
+                    }
+                    img.style.transform=
+                        `translate(${s.x}px,${s.y}px) scale(${s.scale})`;
+                });
+
+                img.addEventListener("touchend",()=>pinch=false);
+
                 wrap.appendChild(img);
                 viewer.appendChild(wrap);
                 scrollItems.push(wrap);
             });
+
         }else{
             viewer.classList.remove("scroll-mode");
             viewer.style.overflow="hidden";
@@ -250,6 +339,10 @@ function init(data){
     };
 
     bottomBar.onclick=()=>preview.classList.toggle("show");
+    prev.onclick=()=>current>0&&showPage(current-1);
+    next.onclick=()=>current<pages.length-1&&showPage(current+1);
+
+    showPage(0);
 }
 </script>
 
